--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Quick Credit is an online lending platform that provides short term soft loans to individuals. This helps solve problems of financial inclusion as a way to alleviate poverty and empower low income earners.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/suleyunus/quick-credit/issues"
   },
-  "homepage": "https://github.com/suleyunus/quick-credit#readme"
+  "homepage": "https://github.com/suleyunus/quick-credit#readme",
+  "devDependencies": {
+    "eslint": "^5.16.0"
+  }
 }
