--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Quick Credit is an online lending platform that provides short term soft loans to individuals. This helps solve problems of financial inclusion as a way to alleviate poverty and empower low income earners.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require babel-core/register server/test/**/*test.js --exit",
     "eslint": "eslint",
     "start": "nodemon --exec babel-node app.js",
     "build": "babel app.js --out-file index.js",
-    "serve": "node index.js"
+    "serve": "node index.js",
+    "coverage": "nyc --reporter=html --reporter=text npm test",
+    "coveralls": "nyc npm run cover report --reporter=text-lcov | coveralls"
+
   },
   "repository": {
     "type": "git",
@@ -26,10 +29,18 @@
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "codeclimate-test-reporter": "^0.5.1",
+    "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
-    "nodemon": "^1.19.0"
+    "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.19.0",
+    "nyc": "^14.1.0"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
