--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint",
-    "start": "nodemon --exec babel-node index.js",
+    "start": "nodemon --exec babel-node server/server.js",
     "build": "babel server --out-dir dist",
     "serve": "node dist/server.js"
   },
