--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^1.19.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1"
   }
