--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1"
+  },
+  "engines":{
+    "node": "10.15.1"
   }
 }
