--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^6.1.4",
     "morgan": "^1.9.1"
   },
-  "engines":{
+  "engines": {
     "node": "10.15.1"
   }
 }
