--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Quick Credit is an online lending platform that provides short term soft loans to individuals. This helps solve problems of financial inclusion as a way to alleviate poverty and empower low income earners.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc mocha --require babel-register /server/test/**/*test.js --exit",
+    "coverage": "npm test && nyc report --reporter=text-lcov | coveralls",
     "eslint": "eslint",
     "start": "nodemon --exec babel-node server/server.js",
     "build": "babel server --out-dir dist",
@@ -26,13 +27,17 @@
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
     "mocha": "^6.1.4",
-    "nodemon": "^1.19.0"
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.19.0",
+    "nyc": "^14.1.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -42,5 +47,11 @@
   },
   "engines": {
     "node": "10.15.1"
+  },
+  "nyc": {
+    "exclude": [
+      "dist",
+      "**/*.test.js"
+    ]
   }
 }
