--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Quick Credit is an online lending platform that provides short term soft loans to individuals. This helps solve problems of financial inclusion as a way to alleviate poverty and empower low income earners.",
   "main": "index.js",
   "scripts": {
-    "test_": "nyc mocha --require @babel/register ./server/tests/*test.js --exit",
+    "test": "nyc mocha --require @babel/register ./server/tests/*test.js --exit",
     "coverage": "npm test && nyc report --reporter=text-lcov | coveralls",
     "eslint": "eslint",
-    "start": "nodemon --exec babel-node server/server.js",
+    "start_": "nodemon --exec babel-node server/server.js",
     "build": "babel server --out-dir dist",
     "serve": "node dist/server.js"
   },
