--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "nyc mocha --require @babel/register ./server/tests/*test.js --exit",
     "coverage": "npm test && nyc report --reporter=text-lcov | coveralls",
     "eslint": "eslint",
-    "start_": "nodemon --exec babel-node server/server.js",
+    "start:dev": "nodemon --exec babel-node server/server.js",
     "build": "babel server --out-dir dist",
-    "serve": "node dist/server.js"
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
