--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nyc": "^14.1.1"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
