--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "supertest": "^4.0.2"
   },
   "engines": {
     "node": "10.15.1"
