--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "pg": "^7.11.0",
     "supertest": "^4.0.2"
   },
   "engines": {
