--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:mydatabase@localhost:5432/quick_credit_db
+DATABASE_URL=postgres://postgres:avocados@localhost:5432/QuickCreditDB
