--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nyc": "^14.1.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
